--- a/Tempo2/MainPage.xaml
+++ b/Tempo2/MainPage.xaml
@@ -7,12 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,0,0" >
-
-        <!-- This accelerator isn't real, just a way to demo teaching tips -->
-        <Grid.KeyboardAccelerators>
-            <KeyboardAccelerator Key="T" Modifiers="Control,Shift" Invoked="ShowDemoTeachingTip" />
-        </Grid.KeyboardAccelerators>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,0,0" 
+          PointerPressed="TeachingTipDemo_PointerPressed">
 
         <Grid VerticalAlignment="Center" Padding="10">
             <Grid.RowDefinitions>
