--- a/Tempo2/CommonCommandBar.xaml
+++ b/Tempo2/CommonCommandBar.xaml
@@ -1,24 +1,23 @@
-﻿<UserControl
-    x:Class="Tempo.HeaderWithCommands"
+<!-- Copyright (c) Microsoft Corporation. All rights reserved. -->
+<!-- Licensed under the MIT License. See LICENSE in the project root for license information. -->
+
+<UserControl
+    x:Class="Tempo.CommonCommandBar"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Tempo"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
     >
 
-    <!--<Grid Background="{x:Bind ComputeBackgroundColor(IsDarkBackground), Mode=OneWay}">-->
     <Grid x:Name="_root">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-
-        <StackPanel Orientation="Horizontal">
-
+        <CommandBar IsDynamicOverflowEnabled="True" DefaultLabelPosition="Right" 
+                    HorizontalAlignment="Left">
             <AppBarButton Click="BackButton_Click" Label="Back"
                 Background="Transparent"
                 IsEnabled="{x:Bind CanGoBack, Mode=OneWay}"
-                Visibility="{x:Bind ShowBack, Mode=OneWay}" >
+                Visibility="{x:Bind IsBackEnabled, Mode=OneWay}" >
                 <SymbolIcon Symbol="Back"/>
             </AppBarButton>
 
@@ -47,7 +46,7 @@
                 </Button.Flyout>
             </AppBarButton>
 
-            <AppBarButton Label="Docs" Visibility="{x:Bind ShowHome, Mode=OneWay}">
+            <AppBarButton Label="Docs" Visibility="{x:Bind MsdnVisibility, Mode=OneWay}">
                 <SymbolIcon Symbol="Document" />
 
                 <AppBarButton.Flyout>
@@ -96,8 +95,10 @@
             </AppBarButton>
 
             <!-- Button to choose the ApiScope -->
-            <AppBarButton Label="API Scope" Visibility="{x:Bind IsScopeVisible, Mode=OneWay}"
-                          x:Name="_apiScopeButton">
+            <AppBarButton Label="{x:Bind local:App.Instance.ApiScopeName, Mode=OneWay}" 
+                          Visibility="{x:Bind IsScopeVisible, Mode=OneWay}"
+                          x:Name="_apiScopeButton"
+                          ToolTipService.ToolTip="Choose an API scope">
                 <SymbolIcon Symbol="Library"/>
 
                 <AppBarButton.Flyout>
@@ -120,40 +121,7 @@
                     </MenuFlyout>
                 </AppBarButton.Flyout>
             </AppBarButton>
-
-        </StackPanel>
-
-        <Border Grid.Column="1" Margin="0,0,0,0" Padding="10" VerticalAlignment="Center">
-            <Border.Resources>
-                <Style x:Name="_subheaderTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource SubheaderTextBlockStyle}"/>
-                <Style x:Name="_subtitleTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource SubtitleTextBlockStyle}"/>
-                <Style x:Name="_baseTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}"/>
-            </Border.Resources>
-
-            <StackPanel Orientation="Vertical">
-                <!--Orientation="{x:Bind Orientation, Mode=OneWay}"-->
-                <TextBlock x:Name="_heading" FontWeight="Bold" TextWrapping="Wrap" Margin="0,0,10,0" IsTextSelectionEnabled="True"
-                           Style="{x:Bind TitleStyle, Mode=OneWay}">
-                    <Run Text="{x:Bind Heading, Mode=OneWay}" />
-                    <Run Text="{x:Bind SubSubHeading, Mode=OneWay}" />
-                    <Run FontStyle="Italic" Text="{x:Bind PreviewString, Mode=Oneway}" />
-                </TextBlock>
-
-                <!-- bugbug:  Have to init visibility to collapsed -->
-                <TextBlock Text="{x:Bind SubHeading, Mode=OneWay}"
-                           local:CollapseIfEmpty.IsEnabled="True"
-                           x:Name="_textBlock"
-                           TextWrapping="Wrap"
-                           IsTextSelectionEnabled="True"
-                           Style="{x:Bind SubtitleStyle, Mode=Oneway}"
-                           >
-                    <!--Text="{x:Bind ConvertedSubHeading, Mode=OneWay}"-->
-                </TextBlock>
-            </StackPanel>
-        </Border>
-
-
-
+        </CommandBar>
     </Grid>
 
 </UserControl>
