--- a/Tempo2/MainPage.xaml
+++ b/Tempo2/MainPage.xaml
@@ -7,37 +7,32 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,0,0" 
+    <Grid Background="Transparent" Padding="60" 
           PointerPressed="TeachingTipDemo_PointerPressed">
 
-        <Grid VerticalAlignment="Center" Padding="10">
+        <!-- Background was: "{ThemeResource ApplicationPageBackgroundThemeBrush}" -->
+        <Grid VerticalAlignment="Top"
+              Background="White"
+              Padding="40">
             <Grid.RowDefinitions>
+                <!-- Search box -->
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
+
+                <!-- Tab view -->
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-
-            <!-- Bugbug: turn off (control+E) when no physical keyboard -->
-            <!-- Have to guess at the margin to make it line up with the pivot content -->
             <local:SearchBox x:Name="_searchBox" IsAllVisible="True"                 
-                         Grid.Row="1" Grid.ColumnSpan="3"
-                             MaxWidth="800"
-                         />
+                             Grid.Row="0" 
+                             MaxWidth="800"  />
 
-            <Grid Grid.Row="3" Grid.ColumnSpan="3" Margin="0,20,0,0" x:Name="_root" >
+            <Grid x:Name="_root" Grid.Row="1" Margin="50,50,50,0"  >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <ScrollViewer Grid.Row="1" >
+                <ScrollViewer Grid.Row="1" Padding="0,0,10,0">
                     <Grid Margin="0,12,0,0" MaxWidth="1024" 
                             HorizontalAlignment="Center" VerticalAlignment="Center"
                           ColumnDefinitions="3*,2*" >
@@ -46,7 +41,7 @@
                             <!-- bugbug:  nbsp is #160? -->
                             <TextBlock HorizontalAlignment="Left" FontWeight="Bold" TextWrapping="Wrap" >Types, Events, Methods &amp; Properties (Oh&#160;my)</TextBlock>
 
-                            <TextBlock Margin="0,12,0,0" TextWrapping="Wrap">Use the search box above to search the Windows WinRT APIs</TextBlock>
+                            <TextBlock Margin="0,12,0,0" TextWrapping="Wrap">Use the search box above to search the APIs you select on the right</TextBlock>
 
                             <TextBlock Margin="0,12,0,0">Example search strings:</TextBlock>
                             <StackPanel Margin="15,5,0,0">
@@ -61,21 +56,39 @@
 
                             <TextBlock TextWrapping="Wrap" Margin="0,10,0,0">The search text can be simple text or a regular expression.  Spaces are compressed out, so for example "check box" (two words) is the same as "checkbox" (one word).</TextBlock>
 
-                            <TextBlock TextWrapping="Wrap" Margin="0,10,0,0">The search string is checked against type/property/method/event/field names.  It's also checked against parameter names and their types, against ancestors of a class, and against implemented interfaces on a class.</TextBlock>
+                            <TextBlock TextWrapping="Wrap" Margin="0,10,0,0">The search string is checked against type/property/method/event/field names.  It's also checked against parameter names and their types, against ancestors of a class, against implemented interfaces on a class, and anything else on an API that can be found.</TextBlock>
 
                             <StackPanel Margin="0,15,0,0" x:Name="_commandPromptText">
-                                <TextBlock TextWrapping="Wrap" >You can launch the app from the command prompt too, optionally passing in filenames. For example:</TextBlock>
-                                <TextBlock TextWrapping="Wrap">&gt; tempo</TextBlock>
-                                <TextBlock TextWrapping="Wrap">&gt; tempo MyComponent.dll</TextBlock>
+                                <TextBlock TextWrapping="Wrap" >You can launch the app from the command prompt too, optionally passing in filenames. You can also launch as a hyperlink. For example:</TextBlock>
+                                <TextBlock TextWrapping="Wrap" IsTextSelectionEnabled="True">&gt; tempo</TextBlock>
+                                <TextBlock TextWrapping="Wrap" IsTextSelectionEnabled="True">&gt; tempo MyComponent.dll</TextBlock>
+                                <TextBlock TextWrapping="Wrap" IsTextSelectionEnabled="True">&gt; start "tempo:Button"</TextBlock>
                             </StackPanel>
 
-                            <StackPanel Margin="0,15,0,0">
+                            <StackPanel Margin="0,20,0,0">
                                 <TextBlock FontWeight="Bold">Illustrations</TextBlock>
-                                <HyperlinkButton Click="TextRamp_Click">Type ramp</HyperlinkButton>
-                                <HyperlinkButton Click="ColorSamples_Click" >Colors</HyperlinkButton>
-                                <HyperlinkButton Click="SymbolsSamples_Click">Symbols</HyperlinkButton>
-                            </StackPanel>
 
+                                <StackPanel Margin="{StaticResource VerticalMargin}">
+                                    <TextBlock>
+                                <Hyperlink Click="TextRamp_Click">Type ramp</Hyperlink><LineBreak/>
+                                <Run Text="{x:Bind local:TypeRampIllustration.Description}"/>
+                                    </TextBlock>
+                                </StackPanel>
+
+                                <StackPanel Margin="{StaticResource VerticalMargin}">
+                                    <TextBlock>
+                                <Hyperlink Click="ColorSamples_Click">Colors</Hyperlink><LineBreak/>
+                                <Run Text="{x:Bind local:ColorsIllustration.Description}"/>
+                                    </TextBlock>
+                                </StackPanel>
+
+                                <StackPanel Margin="{StaticResource VerticalMargin}">
+                                    <TextBlock>
+                                <Hyperlink Click="SymbolsSamples_Click">Symbols</Hyperlink><LineBreak/>
+                                <Run Text="{x:Bind local:SymbolsIllustration.Description}"/>
+                                    </TextBlock>
+                                </StackPanel>
+                            </StackPanel>
 
                         </StackPanel>
 
@@ -88,7 +101,7 @@
                                     <StackPanel>
                                         <TextBlock>Windows</TextBlock>
                                         <TextBlock Margin="0,10,0,0" TextWrapping="Wrap" >
-                                        Search the Windows APIs installed on this machine
+                                        Search the Windows WinRT APIs installed on this machine
                                         </TextBlock>
                                     </StackPanel>
 
@@ -116,7 +129,7 @@
                                             <Button Click="OpenCustomClick">Open</Button>
                                             <Button Click="CloseCustomClick">Close</Button>
                                         </StackPanel>
-                                        
+
                                         <!-- Show loaded custom filenames -->
                                         <StackPanel Margin="0,5,0,0"
                                                     local:CollapseIfEmpty.IsEnabledFor="{x:Bind _customFilenamesText}">
@@ -131,10 +144,13 @@
 
                                 <!-- Baseline APIs -->
                                 <StackPanel>
-                                    <ListViewHeaderItem/>
+                                    
+                                    <!-- Horizontal line -->
+                                    <local:StackListHeaderItem />
+                                    
                                     <TextBlock FontWeight="Bold">Baseline</TextBlock>
                                     <TextBlock Margin="0,10" TextWrapping="Wrap">Setting a baseline lets you compare the selected set of APIs to the baseline</TextBlock>
-                                    <CheckBox IsThreeState="True" IsChecked="{x:Bind Settings.CompareToBaseline, Mode=TwoWay}" 
+                                    <CheckBox IsThreeState="False" IsChecked="{x:Bind Settings.CompareToBaseline, Mode=TwoWay}" 
                                               Content="Show only new compared to baseline"
                                               IsEnabled="{x:Bind local:App.Instance.IsBaselineScopeLoaded, Mode=OneWay}"/>
 
@@ -154,7 +170,6 @@
                                             Margin="5,0,0,0"/>
                                     </StackPanel>
                                 </StackPanel>
-
                             </StackPanel>
 
 
@@ -162,6 +177,7 @@
                     </Grid>
                 </ScrollViewer>
             </Grid>
+
         </Grid>
 
     </Grid>
