--- a/Tempo2/MethodDetailView.xaml
+++ b/Tempo2/MethodDetailView.xaml
@@ -18,41 +18,41 @@
         <ScrollViewer >
             <StackPanel  >
 
-                <local:HeaderWithCommands Heading="{x:Bind MethodVM.Name, Mode=OneWay}"
-                                     SubHeading="{x:Bind MethodVM.DeclaringType.Name, Mode=OneWay}"
-                                     SubSubHeading="method"
-                                     ShowBack="{x:Bind local:Utils.VisibleIfEither(IsRoot,IsTopLevel), Mode=OneWay}"
-                                     Orientation="{x:Bind local:Utils.HorizontalIf(local:MainPage.AdaptiveSettings.IsWide), Mode=OneWay}"/>
+                <local:CommonCommandBar 
+                    Visibility="{x:Bind local:Utils.VisibleIfEither(IsRoot,IsTopLevel), Mode=OneWay}"
+                    IsBackEnabled="True"  />
+                
+                <local:HeadingBar Heading="{x:Bind MethodVM.Name, Mode=OneWay}"
+                                  Margin="{StaticResource VerticalMargin}"
+                                  SubHeading="{x:Bind MethodVM.DeclaringType.Name, Mode=OneWay}"
+                                  SubSubHeading="method"
+                                  IsSubheading="{x:Bind IsNested, Mode=OneWay}"   />
 
-                <TextBlock Margin="{StaticResource ContentMargin}"
+                <TextBlock Margin="{StaticResource VerticalMargin}"
                            Text="{x:Bind MethodVM.ApiDescriptionAsync, Mode=OneWay}" TextWrapping="Wrap" />
 
                 <!-- Horizontal line -->
-                <ListViewHeaderItem/>
+                <local:StackListHeaderItem/>
 
                 <!-- Bugbug: had to put it all in code -->
                 <RichTextBlock Style="{StaticResource SampleCodeStyleRTB}"
-                           Margin="{StaticResource ContentMarginMinusHeight}"
                            local:CsSyntaxGenerator.Member="{x:Bind MethodVM, Mode=OneWay}"
                            TextWrapping="Wrap" IsTextSelectionEnabled="True"/>
 
 
-                <StackPanel Margin="{StaticResource ContentMargin}">
+                <StackPanel Margin="{StaticResource VerticalMargin}">
                     <local:StackListHeaderItem>Version</local:StackListHeaderItem>
                     <local:BuildNumberText MemberVM="{x:Bind MethodVM, Mode=OneWay}" />
                     <TextBlock Text="{x:Bind MethodVM.Contract, Mode=OneWay}" />
                 </StackPanel>
 
-                <StackPanel Margin="{StaticResource ContentMargin}">
+                <StackPanel Margin="{StaticResource VerticalMargin}">
                     <local:StackListHeaderItem >More</local:StackListHeaderItem>
                     <local:MemberMore MemberVM="{x:Bind MethodVM, Mode=Oneway}"/>
                 </StackPanel>
 
             </StackPanel>
         </ScrollViewer>
-
-        <!--<local:CommonAppBar MemberVM="{x:Bind MethodVM, Mode=OneWay}" Grid.Row="1"
-                            MsdnVisibility="Visible"  />-->
 
     </Grid>
 </local:MySerializableControl>
