--- a/Tempo2/TypeOrMemberDetailView.xaml
+++ b/Tempo2/TypeOrMemberDetailView.xaml
@@ -7,8 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"  x:Name="_detailsGrid">
-        <local:TypeDetailPage  Background="White" x:Name="_typeDetail" IsTopLevel="{x:Bind IsTopLevel, Mode=OneWay}"/>
+    <Grid Background="White"  Padding="10"  x:Name="_detailsGrid">
+        <local:TypeDetailPage  Background="White" x:Name="_typeDetail" IsTopLevel="{x:Bind IsTopLevel, Mode=OneWay}" />
         <local:MethodDetailView Background="White" x:Name="_methodDetail" IsTopLevel="{x:Bind IsTopLevel, Mode=OneWay}" />
         <local:EventDetailView Background="White" x:Name="_eventDetail" IsTopLevel="{x:Bind IsTopLevel, Mode=OneWay}" />
         <local:ConstructorDetailView Background="White" x:Name="_constructorDetail" IsTopLevel="{x:Bind IsTopLevel, Mode=OneWay}" />
